--- a/css/scrolling-nav.css
+++ b/css/scrolling-nav.css
@@ -32,12 +32,13 @@ The padding is very important to make sure the scrollspy picks up the right area
 of those sections to manage the look and feel of the site. */
 
 .intro-section {
-    min-height: 100%;
+    height: 100%;
     padding-top: 150px;
     text-align: center;
     background-size: 100% 100%;
     background-image: url('background2.jpg');
     background-size: cover;
+    background-attachment: fixed;
     position: relative;
     opacity: 2;
     background-position: center;
