--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,14 @@
     font-family: 'Montserrat', sans-serif;
 }
 
+h1 {
+    font-size: 50px;
+}
+
+h2 {
+    font-size: 40px;
+}
+
 .navbar-toggle:hover{
     background-color: grey;
 }
