--- a/css/style.css
+++ b/css/style.css
@@ -111,6 +111,22 @@ form button:hover {
     border-bottom: 6px solid grey;
 }
 
+.logos {
+    margin-top: 120px;
+    height: 50px;
+}
+.contactLogo {
+    max-height: 30px;
+    margin: 10px;
+    
+}
+
+.logos img:hover{
+    max-height: 40px;
+}
+
+
+
 ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
   color: white;
 }
@@ -123,3 +139,4 @@ form button:hover {
 :-moz-placeholder { /* Firefox 18- */
   color: white;
 }
+
